routing and layout edits

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,10 @@
 @import "bootstrap";
 @import "bootstrap-sprockets";
 
+$light-grey: #777;
+$gray-medium-light: #eaeaea;
+$gray-darker: #767676;
+
 #logo {
     float: left;
     margin-right: 10px;
@@ -37,7 +41,7 @@ body {
     margin-bottom: 10px;
   }
 
-  “h1, h2, h3, h4, h5, h6 {
+  h1, h2, h3, h4, h5, h6 {
     line-height: 1;
   }
   
@@ -54,10 +58,39 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: #777;
+  color: $light-grey;
 }
 
 p {
   font-size: 1.1em;
   line-height: 1.7em;
+}
+
+/* footer */
+
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid $gray-medium-light;
+  color: $light-grey;
+
+  a {
+    color: $light-grey;
+    &:hover {
+      color: $gray-darker;
+    }
+  }
+
+  small {
+    float: left;
+  }
+
+  ul {
+    float: right;
+    list-style: none;
+    li {
+      float: left;
+      margin-left: 15px;
+    }
+  }
 }
