--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,13 @@ $light-grey: #777;
 $gray-medium-light: #eaeaea;
 $gray-darker: #767676;
 
+.debug_dump {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
+
+
 #logo {
     float: left;
     margin-right: 10px;
@@ -93,4 +100,12 @@ footer {
       margin-left: 15px;
     }
   }
+}
+
+.debug_dump {
+  clear: both;
+  float: left;
+  width: 100%;
+  margin-top: 45px;
+  @include box_sizing;
 }
