--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -48,19 +48,16 @@ body {
     margin-bottom: 10px;
   }
 
-  h1, h2, h3, h4, h5, h6 {
-    line-height: 1;
-  }
   
   h1 {
-  font-size: 3em;
+
   letter-spacing: -2px;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
 h2 {
-  font-size: 1.2em;
+  font-size: 1em;
   letter-spacing: -1px;
   margin-bottom: 30px;
   text-align: center;
@@ -98,6 +95,7 @@ footer {
     li {
       float: left;
       margin-left: 15px;
+      list-style: none;
     }
   }
 }
