--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,108 +1,108 @@
-@import "bootstrap";
-@import "bootstrap-sprockets";
+// @import "bootstrap";
+// @import "bootstrap-sprockets";
 
-$light-grey: #777;
-$gray-medium-light: #eaeaea;
-$gray-darker: #767676;
+// $light-grey: #777;
+// $gray-medium-light: #eaeaea;
+// $gray-darker: #767676;
 
-.debug_dump {
-  -moz-box-sizing:    border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing:         border-box;
-}
+// .debug_dump {
+//   -moz-box-sizing:    border-box;
+//   -webkit-box-sizing: border-box;
+//   box-sizing:         border-box;
+// }
 
 
-#logo {
-    float: left;
-    margin-right: 10px;
-    font-size: 1.7em;
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: -1px;
-    padding-top: 9px;
-    font-weight: bold;
-  }
+// #logo {
+//     float: left;
+//     margin-right: 10px;
+//     font-size: 1.7em;
+//     color: #fff;
+//     text-transform: uppercase;
+//     letter-spacing: -1px;
+//     padding-top: 9px;
+//     font-weight: bold;
+//   }
   
-  #logo:hover {
-    color: #fff;
-    text-decoration: none;
-  }
+//   #logo:hover {
+//     color: #fff;
+//     text-decoration: none;
+//   }
 
-body {
-    padding-top: 60px;
-  }
+// body {
+//     padding-top: 60px;
+//   }
   
-  section {
-    overflow: auto;
-  }
+//   section {
+//     overflow: auto;
+//   }
   
-  textarea {
-    resize: vertical;
-  }
+//   textarea {
+//     resize: vertical;
+//   }
   
-  .center {
-    text-align: center;
-  }
+//   .center {
+//     text-align: center;
+//   }
   
-  .center h1 {
-    margin-bottom: 10px;
-  }
+//   .center h1 {
+//     margin-bottom: 10px;
+//   }
 
   
-  h1 {
+//   h1 {
 
-  letter-spacing: -2px;
-  margin-bottom: 10px;
-  text-align: center;
-}
+//   letter-spacing: -2px;
+//   margin-bottom: 10px;
+//   text-align: center;
+// }
 
-h2 {
-  font-size: 1em;
-  letter-spacing: -1px;
-  margin-bottom: 30px;
-  text-align: center;
-  font-weight: normal;
-  color: $light-grey;
-}
+// h2 {
+//   font-size: 1em;
+//   letter-spacing: -1px;
+//   margin-bottom: 30px;
+//   text-align: center;
+//   font-weight: normal;
+//   color: $light-grey;
+// }
 
-p {
-  font-size: 1.1em;
-  line-height: 1.7em;
-}
+// p {
+//   font-size: 1.1em;
+//   line-height: 1.7em;
+// }
 
-/* footer */
+// /* footer */
 
-footer {
-  margin-top: 45px;
-  padding-top: 5px;
-  border-top: 1px solid $gray-medium-light;
-  color: $light-grey;
+// footer {
+//   margin-top: 45px;
+//   padding-top: 5px;
+//   border-top: 1px solid $gray-medium-light;
+//   color: $light-grey;
 
-  a {
-    color: $light-grey;
-    &:hover {
-      color: $gray-darker;
-    }
-  }
+//   a {
+//     color: $light-grey;
+//     &:hover {
+//       color: $gray-darker;
+//     }
+//   }
 
-  small {
-    float: left;
-  }
+//   small {
+//     float: left;
+//   }
 
-  ul {
-    float: right;
-    list-style: none;
-    li {
-      float: left;
-      margin-left: 15px;
-      list-style: none;
-    }
-  }
-}
+//   ul {
+//     float: right;
+//     list-style: none;
+//     li {
+//       float: left;
+//       margin-left: 15px;
+//       list-style: none;
+//     }
+//   }
+// }
 
-.debug_dump {
-  clear: both;
-  float: left;
-  width: 100%;
-  margin-top: 45px;
-}
+// .debug_dump {
+//   clear: both;
+//   float: left;
+//   width: 100%;
+//   margin-top: 45px;
+// }
