Error handling and sign up

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="center jumbotron">
-<% provide(:title, 'Home') %>
+<% provide(yield(:title), 'Home') %>
   <h1>Welcome to the Sample App</h1>
 
   <h2>
