--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,14 +17,14 @@
           <li><%= link_to "Settings", '#' %></li>
           <li class="divider"></li>
           <li>
-            <%= link_to "Log out", logout_path, method: :delete %>
+            <%# link_to "Log out", logout_path, method: :delete %>
           </li>
         </ul>
       </li>
     <% else %>
       <li><%= link_to "Log in", login_path %></li>
     <% end %>
-    
+
         
     </ul>
   </nav>
