--- a/app/views/user_mailer/account_activation.text.erb
+++ b/app/views/user_mailer/account_activation.text.erb
@@ -1,6 +1,6 @@
 User#account_activation
 
-Hi <%= user.name %>,
+Hi <%= @user.name %>,
 
 Welcome to Hartl Hell. Click on the link below to activate your account:
 
